delete patterns from database. Merge patterns in database. Import folders into database.